2010-09-02  Anton Muhin  <antonm@chromium.org>

        Reviewed by Tony Chang.

        Fix indentation.
        https://bugs.webkit.org/show_bug.cgi?id=44678

        * bindings/scripts/CodeGeneratorV8.pm:

2010-09-02  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r66655.
        http://trac.webkit.org/changeset/66655
        https://bugs.webkit.org/show_bug.cgi?id=45104

        broke some editing tests (Requested by kling on #webkit).

        * page/DOMSelection.cpp:
        (WebCore::DOMSelection::collapse):
        (WebCore::DOMSelection::selectAllChildren):

2010-09-02  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r66649.
        http://trac.webkit.org/changeset/66649
        https://bugs.webkit.org/show_bug.cgi?id=45103

        It broke ~2000 tests on Qt bot (Requested by Ossy on #webkit).

        * dom/Document.cpp:
        (WebCore::Document::open):
        * dom/DocumentParser.cpp:
        (WebCore::DocumentParser::DocumentParser):
        (WebCore::DocumentParser::detach):
        * dom/DocumentParser.h:
        (WebCore::DocumentParser::isDetached):
        (WebCore::DocumentParser::stopParsing):
        * dom/RawDataDocumentParser.h:
        (WebCore::RawDataDocumentParser::finish):
        * dom/XMLDocumentParser.cpp:
        (WebCore::XMLDocumentParser::append):
        (WebCore::XMLDocumentParser::exitText):
        * dom/XMLDocumentParserLibxml2.cpp:
        (WebCore::XMLDocumentParser::doWrite):
        (WebCore::XMLDocumentParser::startElementNs):
        (WebCore::XMLDocumentParser::endElementNs):
        (WebCore::XMLDocumentParser::characters):
        (WebCore::XMLDocumentParser::error):
        (WebCore::XMLDocumentParser::processingInstruction):
        (WebCore::XMLDocumentParser::cdataBlock):
        (WebCore::XMLDocumentParser::comment):
        (WebCore::XMLDocumentParser::internalSubset):
        (WebCore::XMLDocumentParser::initializeParserContext):